--- a/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
+++ b/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
@@ -178,23 +178,31 @@
                 <RowDefinition Height="25*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackPanel
+            <Grid
                 Grid.Column="0"
                 Grid.Row="0">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
                 <Border
+                    Grid.Row="0"
                     BorderBrush="LightGray"
                     BorderThickness="1"
                     Margin="5">
                     <Label HorizontalContentAlignment="Center" FontSize="16" Foreground="Gray">Mass Vs. Scan</Label>
                 </Border>
-                <WindowsFormsHost>
+                <WindowsFormsHost                    
+                    Grid.Row="1"
+                    >
                     <maCharts:SingleUMCChart
                                     x:Name="m_msFeaturePlot"
                                     Title=""                                    
                                     LegendVisible="False"                
                                     />
-            </WindowsFormsHost>
-            </StackPanel>
+                </WindowsFormsHost>
+            </Grid>
             <GridSplitter
                         Grid.Row="1"
                         Grid.Column="0"                
@@ -204,9 +212,14 @@
                         Margin="1"
                         Background="#FFA0A0A0"/>
             <!-- Plots based on feature selection -->
-            <StackPanel
-                                Grid.Column="2"
-                                Grid.Row="2">
+            <Grid
+                Grid.Column="0"
+                Grid.Row="2">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
                 <Border
                     BorderBrush="LightGray"
                     BorderThickness="1"
@@ -223,7 +236,7 @@
                                         LegendVisible="False"                
                                         />
                 </WindowsFormsHost>
-            </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
     
