--- a/src/MultiAlign/Windows/Viewers/Clusters/ClusterTree.xaml
+++ b/src/MultiAlign/Windows/Viewers/Clusters/ClusterTree.xaml
@@ -40,10 +40,11 @@
                  BorderBrush="LightGray"            
                  Margin="5">                    
             <TreeView 
-                  Margin="5"
-                  ItemsSource="{Binding FilteredClusters}"
-                  VirtualizingStackPanel.IsVirtualizing="True"
-                  VirtualizingStackPanel.VirtualizationMode="Recycling"
+                    Margin="5"
+                    ItemsSource="{Binding FilteredClusters}"
+                    VirtualizingStackPanel.IsVirtualizing="True"
+                    VirtualizingStackPanel.VirtualizationMode="Recycling"
+                    HorizontalContentAlignment="Stretch"
                   >
                 <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
@@ -123,8 +124,7 @@
                         </Grid>
                     </HierarchicalDataTemplate>
                 
-
-                    <!-- Mass Tags -->  
+                <!-- Mass Tags -->  
                 <HierarchicalDataTemplate 
                         DataType="{x:Type viewModels:MassTagCollectionMatchTreeViewModel}" 
                         ItemsSource="{Binding MassTags}">
