Dataset Viewer for alignment plots etc.

--- a/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
+++ b/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
@@ -115,8 +115,7 @@
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                 Header="Datasets"                
                 >
-                <datasetViews:DatasetGrid
-                    Datasets="{Binding Path=Datasets}"/>
+                <datasetViews:DatasetView DataContext="{Binding Path=Datasets}"/>
             </TabItem>
             <TabItem
                 
