--- a/src/MultiAlign/Windows/Wizard/DatasetSelection.xaml
+++ b/src/MultiAlign/Windows/Wizard/DatasetSelection.xaml
@@ -244,9 +244,8 @@
             </WrapPanel>
             <Label
                 Grid.Column="1"
-                Content="{Binding Path=Datasets.Count}"
-                    VerticalContentAlignment="Center"
-                >
+                Content="{Binding Path=Analysis.MetaData.Datasets.Count}"
+                    VerticalContentAlignment="Center">
             </Label>
             <Label
                 Grid.Column="2"
