--- a/src/MultiAlign/Windows/Viewers/Datasets/DatasetInformationView.xaml
+++ b/src/MultiAlign/Windows/Viewers/Datasets/DatasetInformationView.xaml
@@ -5,15 +5,35 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:maWindows="clr-namespace:MultiAlign.Windows"
              xmlns:maConverters="clr-namespace:MultiAlign.Converters"
+             xmlns:datasetViews="clr-namespace:MultiAlign.Windows.Viewers.Datasets"
              mc:Ignorable="d" 
              d:DesignHeight="217"
              d:DesignWidth="819">
     <UserControl.Resources>
         <maConverters:UriToBitmapConverter x:Key="UriToBitmapConverter" />
         <maConverters:BoolVisibilityConverter x:Key="boolConverter"/>
+        <DataTemplate x:Key="DatasetDataTemplate">
+            <datasetViews:DatasetPlotView/>
+        </DataTemplate>
+        <Style TargetType="{x:Type ListBox}">            
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                    Value="Disabled"/>
+        </Style>
     </UserControl.Resources>
     
-    <Grid>
+    <Border
+        BorderBrush="DarkGray"
+        BorderThickness="2"        
+        Margin="5">
+        <Grid
+            Margin="5">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="96"  />
@@ -23,121 +43,52 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"  />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="24" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="96"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0"     Grid.Column="1"   Content="{Binding Path=Name}"/>
-            <Label Grid.Row="1"     Grid.Column="1"   Content="{Binding Path=Id}"/>
-            
-            <Label
-            FontSize="16"
-            Foreground="Gray">
-                Dataset ID:
-            </Label>
-            <Label
+                <Label  Grid.Row="0"    
+                        Grid.Column  ="1"   
+                        VerticalContentAlignment="Center"
+                        FontSize="24"
+                        Content="{Binding Path=DisplayName}"/>
+                <Label  Grid.Row="1"  
+                        Grid.Column="1"   
+                        VerticalContentAlignment="Center"  
+                        FontSize="12" 
+                        Content="{Binding Path=Id}"/>
+                <Label
+                    Grid.Row="0"
+                    FontSize="24"
+                    VerticalContentAlignment="Center"
+                    Foreground="Gray">
+                    Name
+                </Label>
+                <Label
+                    Grid.Row="1"
+                    FontSize="12"
+                    VerticalContentAlignment="Center"
+                    Foreground="Gray">
+                    ID
+                </Label>
+        </Grid>
+
+            <Expander
+                Margin="5"
+                HorizontalAlignment="Stretch"
                 Grid.Row="1"
                 FontSize="16"
-                Foreground="Gray">
-                Dataset:
-            </Label>
+                Header="Images"
+                IsExpanded="{Binding Path=ShouldExpand}"            
+                ExpandDirection="Down">                
+                <ListBox
+                    ItemTemplate="{StaticResource DatasetDataTemplate}"
+                    ItemsSource="{Binding Path=PlotData}"                    
+                    />
+            </Expander>
         </Grid>
-        
-        <Expander
-            Margin="5"
-            HorizontalAlignment="Stretch"
-            Grid.Row="1"
-            FontSize="16"
-            Header="Dataset Images"
-            IsExpanded="True"
-            
-            ExpandDirection="Down"
-            >
-            <Grid Grid.Row="1" Margin="30,10,10,10">
-                <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"  />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-                
-                <!-- Feature Plots-->
-                        <Label HorizontalAlignment="Center"
-            Content="Features"  />
-                                        <Image
-            Grid.Row="1" 
-            Source="{Binding  Path=PlotData.Features, Converter={StaticResource UriToBitmapConverter}}" 
-            />
-                <!-- Alignment Heatmap -->
-                                <Label Grid.Column="1"            
-            HorizontalAlignment="Center"
-            Content="Alignment"  />
-                                                    <Image
-            Grid.Row="1"
-            Grid.Column="1"
-            x:Name="m_alignmentHeatmap"
-            Source="{Binding  Path=PlotData.Alignment, Converter={StaticResource UriToBitmapConverter}}"/>
-                <!-- Mass Error Histograms -->
-                                <Label Grid.Column="2"
-            HorizontalAlignment="Center"
-            Content="Mass Error" />
-                                                <Image
-            Grid.Row="1"
-            Grid.Column="2"            
-            x:Name="m_massErrorHistogram"            
-            Source="{Binding  Path=PlotData.MassErrorHistogram, Converter={StaticResource UriToBitmapConverter}}"/>
-                <!-- NET Histograms -->
-                                <Label Grid.Column="3"
-            HorizontalAlignment="Center"
-            Content="NET Error" />
-                                                        <Image 
-            Grid.Column="3"
-            Grid.Row="1"
-            x:Name="m_netErrorHistogram"            
-            Source="{Binding  Path=PlotData.NetErrorHistogram, Converter={StaticResource UriToBitmapConverter}}" 
-                />        
-                <!-- Mass / Net Residual -->
-                <!-- Mass Residuals Scan -->
-                                <Label Grid.Column="4"
-            HorizontalAlignment="Center"
-            Content="Mass Residuals (scan)" />
-                                                <Image
-            Grid.Row="1"
-            Grid.Column="4"
-            x:Name="m_massScanResidual"
-            Source="{Binding  Path=PlotData.MassScanResidual, Converter={StaticResource UriToBitmapConverter}}"/>
-        
-                <!-- Mass Residuals m/z -->
-                <Label Grid.Column="5"
-                    HorizontalAlignment="Center"
-                    Content="Mass Residuals (m/z)"   />
-                <Image Grid.Column="5"
-                       Grid.Row="1"
-                    x:Name="m_massMzResidual"
-                    Source="{Binding  Path=PlotData.MassMzResidual, Converter={StaticResource UriToBitmapConverter}}"
-                     />
-                <!-- Net Residuals -->
-                <Label Grid.Column="6"
-                    HorizontalAlignment="Center"
-                    Content="NET Residuals"  />
-                <Image
-                    Grid.Row="1"
-                    Grid.Column="6"
-                    x:Name="m_netResidual"
-                    Source="{Binding  Path=PlotData.NetResiduals, Converter={StaticResource UriToBitmapConverter}}"/>
-        
-                <!-- Scan vs. Net -->
-            </Grid>
-        </Expander>
-    </Grid>
+    </Border>
 </UserControl>
